fixed team picture styling because the different aspect ratios made it look goofy. 200px x 200px with cover so it doesnt stretch the image. Team Member Card Component is named XII, wasn't difficult to figure out but maybe this should be changed in the future.

--- a/src/components/Team/Team.module.scss
+++ b/src/components/Team/Team.module.scss
@@ -92,10 +92,11 @@
   .person {
     font-size: 14px;
     margin: 5px;
-    
   }
 
   .osp4Pic {
+    object-fit: cover;
+    height: 200px;
     width: 200px;
   }
 
